tests/requests/valid/031.py
#
# This file is part of gunicorn released under the MIT license.
# See the NOTICE for more information.

request = {
    "method": "-BLARGH",
    "uri": uri("/foo"),
    "version": (1, 1),
    "headers": [],
    "body": b""
}
